@@ -10,6 +10,9 @@
 VERSION 5.5.21 (July 05, 2005)
 ==============================
 
+  * ENHANCED: MS-Windows: remove 256 character paste-limit from plwin
+    console.  Steve Moyle.
+
   * FIXED: float formatting in atom_number/2, etc.  
 
   * ADDED: Documentation of the gensym library.
